--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="assets/css/imgText.css">    <!-- 공통 -->
     <link rel="stylesheet" href="assets/css/banner.css">    <!-- 공통 -->
     <link rel="stylesheet" href="assets/css/footer.css">    <!-- 공통 -->
+    <link rel="stylesheet" href="assets/css/slider.css">    <!-- 공통 -->
 
 
 </head>
@@ -66,7 +67,33 @@
     <main id="mainType">
 
         <section id="sliderType" class="slider__wrap">
-            <h2>슬라이드 영역</h2>
+            <h2 class="blind">슬라이드 영역</h2>
+            <div class="slider__inner">
+                <div class="slider">
+                    <div class="slider__img">
+                        <div class="desc">
+                            <span>CITY</span>
+                            <h3>SIGHTSEEING</h3>
+                            <p>각각의 도시는 고유의 모습이 있습니다 <br>한국은 과연 어떤 모습일까요?</p>
+                            <div class="btn">
+                                <a href="#">자세히 보기</a>
+                                <a href="#" class="black">사이트 보기</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__arrow">
+                        <a href="#" class="left"><span class="ir">이전 이미지</span></a>
+                        <a href="#" class="right"><span class="ir">다음 이미지</span></a>
+                    </div>
+                    <div class="slider__dot">
+                        <a href="#" class="dot active"><span class="ir">1</span></a>
+                        <a href="#" class="dot"><span class="ir">2</span></a>
+                        <a href="#" class="dot"><span class="ir">3</span></a>
+                        <a href="#" class="play"><span class="ir">플레이</span></a>
+                        <a href="#" class="stop"><span class="ir">정지</span></a>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- //sliderType -->
 
@@ -94,48 +121,48 @@
         </div> -->
 
         <section id="imageType01" class="image__wrap nexon section">
-            <h2>육식 동물들</h2>
-            <p>사납고 무서운 동물들 리스트 입니다.</p>
+            <h2>도시에서 키우는 반려견!</h2>
+            <p>사람들이 북적이는 넓디 넓은 도시에서 어떤 동물을 한번 키워볼까요??</p>
             <div class="image__inner container">
                 <article class="image img1">
-                    <h3 class="image__title">무서운 맹수 호랑이</h3>
+                    <h3 class="image__title">불독은 어떠세요?</h3>
                     <p class="image__desc">
-                        호랑이는 무섭습니다. 무서운 맹수입니다. 호랑이는 사납습니다.
-                        호랑이는 매우 위협적인 동물입니다. 만나면 도망가야합니다.</p>
-                    <a class="image__btn" href="/" title="자세히 보기">자세히 보기</a>
+                        불독은 혼종이라고 하는데, 사람들에게 인기많은 이유는<br>
+                        생김새를 떠나서 강아지를 키운다는 그 사실이 좋은겁니다.</p>
+                    <a class="image__btn yellow" href="/" title="자세히 보기">자세히 보기</a>
                 </article>
                 <article class="image img2">
-                    <h3 class="image__title">사나운 맹수 늑대</h3>
+                    <h3 class="image__title">웰시코기는 어떠세요?</h3>
                     <p class="image__desc">
-                        늑대는 무섭습니다. 무서운 맹수입니다 늑대는 사납습니다.
-                        늑대는 매우 위협적인 동물입니다. 만나면 도망가야 합니다.</p>
-                    <a class="image__btn yellow" href="/" title="자세히 보기">자세히 보기</a>
+                        웰시코기는 다리가 참 짧죠? 그래서 키우는 사람들도 많은 편이고<br>
+                        총총 걸어다니는 모습을 보고있자니 너무 귀엽답니다!</p>
+                    <a class="image__btn" href="/" title="자세히 보기">자세히 보기</a>
                 </article>
             </div>
         </section>
         <!-- //imageType -->
 
         <section id=imgTextType" class="imgText__wrap nexon section gray">
-            <h2 class="blind">유용한 사이트 살퍄ㅕ보기 🎮</h2>
+            <h2 class="blind">유용한 사이트 살펴보기 🎮</h2>
             <div class="imgText__inner container">
                 <div class="imgText__txt">
-                    <span>이미지 텍스트 유형01</span>
-                    <h3>유용한 사이트 살펴보기</h3>
-                    <p>웹 디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 유용한 사이트입니다.</p>       
+                    <span>오늘은 어떤걸 할까요?</span>
+                    <h3>도시 생활을 즐겨봅시다!</h3>
+                    <p>우리 다 같이 도시 라이프를 다채로운 방식으로 함께 즐겨보아요!</p>       
                     <ul>
-                        <li><a href="/">튜토리얼 사이트</a></li>
-                        <li><a href="/">레퍼런스 사이트</a></li>
-                        <li><a href="/">웹폰트 사이트</a></li>
-                        <li><a href="/">CSS 사이트</a></li>
-                        <li><a href="/">WebGL 사이트</a></li>
-                        <li><a href="/">Youtube 사이트</a></li>
-                    </ul>        
+                        <li><a href="/">오늘의 티</a></li>
+                        <li><a href="/">오늘의 공원</a></li>
+                        <li><a href="/">오늘의 장소</a></li>
+                        <li><a href="/">오늘의 가게</a></li>
+                        <li><a href="/">오늘의 춤</a></li>
+                        <li><a href="/">오늘의 회사 출근 음악</a></li>
+                    </ul>
                 </div>
                 <div class="imgText__img img1">
-                    <a href="/">레퍼런스 사이트</a>
+                    <a href="/">비즈니스</a>
                 </div>
                 <div class="imgText__img img2">
-                    <a href="/" class="blue">튜토리얼 사이트</a>
+                    <a href="/" class="blue">작업할때</a>
     
                 </div>
             </div>
@@ -144,8 +171,8 @@
 
         <section id="cardType" class="card__wrap nexon section">
             <!--다중 클래스 선택-->
-            <h2>PS5 Controller User Guide 🎮</h2>
-            <p>새롭고 혁신적인 PS5™ 컨트롤러로 완전히 몰입할 수 있는 게임 경험1을 만끽하세요</p>
+            <h2>지루한 도시생활 속 게임은 어떠세요 🎮</h2>
+            <p>새롭고 혁신적인 PS5™ 컨트롤러로 완전히 몰입할 수 있는 게임 경험을 즐겨보시기 바랍니다.</p>
             <div class="card__inner container">
                 <article class="card">
                     <figure class="card__header">
@@ -277,14 +304,69 @@
                         <li><a href="/">웹표준 사이트</a></li>
                         <li><a href="/">웹표준 사이트</a></li>
                         <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
                     </ul>
                 </div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>
+                    <h3>사이트</h3>
+                    <ul>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>사이트</h3>
+                    <ul>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>사이트</h3>
+                    <ul>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>사이트</h3>
+                    <ul>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>사이트</h3>
+                    <ul>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                        <li><a href="/">웹표준 사이트</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__right">
+                2022 CODi. Portfolio is power<br>
+                All rights reserved.
             </div>
         </div>
     </footer>
