--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -241,12 +241,12 @@
         <section id="bannerType" class="banner__wrap nexon">
             <h2 class="blind">배너 영역</h2>
             <div class="banner__inner">
-                <h3 class="title">유튜버 웹보이</h3>
+                <h3 class="title">오늘의 도시는 여기다!</h3>
                 <p class="desc">
-                    더 다양한 강의는 하단을 참조하세요
-                    <a href="" title="유튜브 페이지로 이동">www.naver.com</a>
+                    다양하고 다채로운 도시의 모습은 이곳을 참조하세요!
+                    <a href="" title="유튜브 페이지로 이동">https://www.youtube.com/channel/UCqVDpXKLmKeBU_yyt_QkItQ/</a>
                 </p>
-                <span class="small">배너 유형01</span>
+                <span class="small">도시 속 모습_01</span>
             </div>
         </section>
         <!-- //bannerType -->
