--- a/javascript/study/study_22.09/web_footer.html
+++ b/javascript/study/study_22.09/web_footer.html
@@ -93,7 +93,7 @@
                         <hr>
                         <h2 class="t_tit2">Figma</h2>
                         <p class="t_box">우선 피그마를 통해 기초적인 틀을 잡습니다!</p>
-                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FewZhegdXfKs97FmXGSpvyx%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0-02%3Fnode-id%3D816%253A947" allowfullscreen></iframe>
+                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FewZhegdXfKs97FmXGSpvyx%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0-02%3Fnode-id%3D816%253A947" allowfullscreen></iframe>
                         
                         <hr>
 
