--- a/javascript/javascript07.html
+++ b/javascript/javascript07.html
@@ -61,7 +61,18 @@
     <!-- //header -->
     <main id="main">
         <div class="container">
-            
+            <div class="main_menu">
+                <ul>
+                    <li><a href="#">01. 수학 메서드 : Math.round() : 반올림 : 반환(숫자)</a></li>
+                    <li><a href="#">01. 수학 메서드 : Math.floor() : 버림 : 반환(숫자)</a></li>
+                    <li><a href="#">01. 수학 메서드 : Math.ceil() : 올림 : 반환(숫자)</a></li>
+                    <li><a href="#">01. 수학 메서드 : Math.max() : 가장 큰 값 반환 : 반환(숫자)</a></li>
+                    <li><a href="#">01. 수학 메서드 : Math.min() : 가장 큰 값 반환 : 반환(숫자)</a></li>
+                    <li><a href="#">01. 수학 메서드 : Math.abs() : 절대값 값 반환 : 반환(숫자)</a></li>
+                    <li><a href="#">01. 수학 메서드 : Math.trulc() : 값의 정수 부분만 반환 : 반환(숫자)</a></li>
+                    <li><a href="#">01. 수학 메서드 : Math.random() : 랜덤 값 반환(0~1 사이에 난수 값을 반환) : 반환(숫자)</a></li>
+                </ul>
+            </div>
         </div>
     </main>
     <!-- //main -->
